--- a/src/vue/vueChoixPseudo.fxml
+++ b/src/vue/vueChoixPseudo.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="148.0" prefWidth="557.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="148.0" prefWidth="557.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueChoixPseudoControleur">
    <children>
       <HBox alignment="CENTER" prefHeight="51.0" prefWidth="525.0" styleClass="grade-info-band">
          <VBox.margin>
@@ -24,7 +25,7 @@
                   <Font name="Verdana Bold" size="16.0" />
                </font>
             </Text>
-            <TextField prefHeight="25.0" prefWidth="230.0">
+            <TextField fx:id="pseudoInput" prefHeight="25.0" prefWidth="230.0">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </HBox.margin>
@@ -36,7 +37,7 @@
       </HBox>
       <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button mnemonicParsing="false" styleClass="secondary-button" text="ANNULER">
+            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" styleClass="secondary-button" text="ANNULER">
                <HBox.margin>
                   <Insets right="16.0" />
                </HBox.margin>
@@ -46,19 +47,19 @@
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@ressources/icone_annuler.png" />
+                        <Image url="@../vue/ressources/icone_annuler.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
-            <Button mnemonicParsing="false" styleClass="primary-button" text="CHANGER DE PSEUDO">
+            <Button mnemonicParsing="false" onAction="#changerDePseudoPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" styleClass="primary-button" text="CHANGER DE PSEUDO">
                <HBox.margin>
                   <Insets right="16.0" />
                </HBox.margin>
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@ressources/icone_pseudo.png" />
+                        <Image url="@../vue/ressources/icone_pseudo.png" />
                      </image>
                   </ImageView>
                </graphic>
