--- a/src/vue/vueImporter.fxml
+++ b/src/vue/vueImporter.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="283.0" prefWidth="845.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="283.0" prefWidth="845.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueImporterControleur">
    <children>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Importer des données..." wrappingWidth="253.8828125">
          <font>
@@ -34,14 +36,14 @@
             <VBox prefHeight="200.0" prefWidth="100.0" />
             <VBox alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="328.0">
                <children>
-                  <Button mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" styleClass="primary-button" text="IMPORTER" textFill="WHITE">
+                  <Button mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#importerPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" styleClass="primary-button" text="IMPORTER" textFill="WHITE">
                      <font>
                         <Font name="Verdana Bold" size="12.0" />
                      </font>
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@ressources/icone_importer.png" />
+                              <Image url="@../vue/ressources/icone_importer.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -59,7 +61,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </HBox>
-      <HBox prefHeight="72.0" prefWidth="813.0" styleClass="grade-info-band" stylesheets="@style.css">
+      <HBox prefHeight="72.0" prefWidth="813.0" styleClass="grade-info-band">
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
@@ -75,11 +77,11 @@
             </VBox>
             <VBox alignment="CENTER_RIGHT" prefHeight="64.0" prefWidth="375.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="225.0" styleClass="primary-button" text="AFFICHER L'ADRESSE IP">
+                  <Button mnemonicParsing="false" onAction="#afficherAdresseIPPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="32.0" prefWidth="225.0" styleClass="primary-button" text="AFFICHER L'ADRESSE IP">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@ressources/icone_afficher_ip.png" />
+                              <Image url="@../vue/ressources/icone_afficher_ip.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -94,11 +96,11 @@
             </VBox>
             <VBox alignment="CENTER_RIGHT" prefHeight="64.0" prefWidth="386.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="32.0" prefWidth="245.0" styleClass="primary-button" text="ETABLIR UNE CONNEXION">
+                  <Button mnemonicParsing="false" onAction="#etablirUneConnexionPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="32.0" prefWidth="245.0" styleClass="primary-button" text="ETABLIR UNE CONNEXION">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@ressources/icone_connexion.png" />
+                              <Image url="@../vue/ressources/icone_connexion.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -121,14 +123,14 @@
       </HBox>
       <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button mnemonicParsing="false" styleClass="secondary-button" text="ANNULER">
+            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" styleClass="secondary-button" text="ANNULER">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
                <graphic>
                   <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@ressources/icone_annuler.png" />
+                        <Image url="@../vue/ressources/icone_annuler.png" />
                      </image>
                   </ImageView>
                </graphic>
