--- a/src/vue/style.css
+++ b/src/vue/style.css
@@ -48,21 +48,36 @@
 }
 
 .button {
-	-fx-border-radius : 4px;
-	-fx-font-family : verdana;
-	-fx-font-weight : bold;
+    -fx-border-radius : 4px;
+    -fx-font-family : verdana;
+    -fx-font-size: 12px;
+    -fx-font-weight : bold;
 }
 
 .primary-button {
-	-fx-background-color : #9555E8;
-	-fx-text-fill : white;
+    -fx-text-fill : white;
+}
+
+.primary-button-not-hover {
+    -fx-background-color : #9555E8;
+}
+
+.primary-button-hover {
+    -fx-background-color : #5A18AF;
 }
 
 .secondary-button {
-	-fx-background-color : transparent;
-	-fx-border-style : solid outside;
-	-fx-border-color: #9555E8;
-	-fx-text-fill : #9555E8;
+    -fx-border-style : solid outside;
+    -fx-border-color: #9555E8;
+    -fx-text-fill : #9555E8;
+}
+
+.secondary-button-hover {
+    -fx-background-color : #D8C0F6;
+}
+
+.secondary-button-not-hover {
+    -fx-background-color : transparent;
 }
 
 .grade-info-band {
