--- a/src/vue/modules/ModuleRessource.fxml
+++ b/src/vue/modules/ModuleRessource.fxml
@@ -9,7 +9,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox spacing="16.0" styleClass="grade-info-band" stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox spacing="4.0" HBox.hgrow="ALWAYS">
          <children>
