--- a/src/vue/modules/ModuleTitreCompetence.fxml
+++ b/src/vue/modules/ModuleTitreCompetence.fxml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.net.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<HBox stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox HBox.hgrow="ALWAYS">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="U2.01 - Réaliser">
+            <Text fx:id="titre" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title" text="U2.01 - Réaliser">
                <font>
                   <Font name="Verdana Bold" size="24.0" />
                </font>
@@ -22,7 +17,7 @@
       </HBox>
       <HBox alignment="TOP_RIGHT" prefHeight="40.0" HBox.hgrow="ALWAYS">
          <children>
-            <Text fill="#22ffd7" strokeType="OUTSIDE" strokeWidth="0.0" text="17.23">
+            <Text fx:id="note" fill="#22ffd7" strokeType="OUTSIDE" strokeWidth="0.0" text="17.23">
                <font>
                   <Font name="Verdana Bold" size="24.0" />
                </font>
