--- a/src/vue/modules/ModuleTitreRessource.fxml
+++ b/src/vue/modules/ModuleTitreRessource.fxml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.net.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<HBox stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_LEFT" spacing="16.0">
          <children>
@@ -22,7 +20,7 @@
                   </Text>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" styleClass="primary-button" stylesheets="@../modele/vue/style.css" text="EDITER" textFill="WHITE">
+            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" styleClass="primary-button" stylesheets="@../modele/vue/style.css" text="EDITER LES MODALITES" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
