--- a/src/vue/modules/ModuleTitreRessourceEdition.fxml
+++ b/src/vue/modules/ModuleTitreRessourceEdition.fxml
@@ -9,7 +9,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<HBox stylesheets="@../style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_LEFT" spacing="16.0" HBox.hgrow="ALWAYS">
          <children>
