--- a/src/vue/style.css
+++ b/src/vue/style.css
@@ -7,7 +7,7 @@
 }
 
 .scroll-pane .viewport {
-       -fx-background-color: transparent;
+    -fx-background-color: transparent;
 }
 
 .secondary-button {
@@ -59,5 +59,14 @@
 	-fx-alignment : center-left;
 	-fx-font-family : verdana;
 	-fx-font-weight : bold;
+}
+
+.utilisateur {
+	-fx-background-color : transparent;
+	-fx-text-fill : white;
+	-fx-font-family : verdana;
+	-fx-font-weight : bold;
+	-fx-font-size : 24px;
+	-fx-padding : 0;
 }
  
