--- a/src/vue/vueImporter.fxml
+++ b/src/vue/vueImporter.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
@@ -9,19 +15,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="283.0" prefWidth="845.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueImporterControleur">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="283.0" prefWidth="845.0" spacing="16.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueImporterControleur">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Importer des données..." wrappingWidth="253.8828125">
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="IMPORTER DES DONNEES..." wrappingWidth="253.8828125">
          <font>
             <Font name="Verdana Bold" size="16.0" />
          </font>
          <VBox.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            <Insets />
          </VBox.margin>
       </Text>
       <HBox alignment="CENTER" prefHeight="72.0" prefWidth="813.0" styleClass="grade-info-band">
          <children>
-            <VBox alignment="CENTER_LEFT" prefHeight="62.0" prefWidth="386.0">
+            <VBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="... depuis un fichier.csv" wrappingWidth="233.6484375">
                      <font>
@@ -29,17 +35,10 @@
                      </font>
                   </Text>
                </children>
-               <padding>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-               </padding>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0" />
-            <VBox alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="328.0">
+            <VBox alignment="CENTER_RIGHT">
                <children>
-                  <Button mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#importerPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" styleClass="primary-button" text="IMPORTER" textFill="WHITE">
-                     <font>
-                        <Font name="Verdana Bold" size="12.0" />
-                     </font>
+                  <Button mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#importerPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" text="IMPORTER">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -47,23 +46,24 @@
                            </image>
                         </ImageView>
                      </graphic>
+                     <styleClass>
+                        <String fx:value="primary-button" />
+                        <String fx:value="primary-button-not-hover" />
+                     </styleClass>
                   </Button>
                </children>
-               <padding>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-               </padding>
             </VBox>
          </children>
          <VBox.margin>
-            <Insets bottom="16.0" left="5.0" right="5.0" top="5.0" />
+            <Insets />
          </VBox.margin>
          <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
          </padding>
       </HBox>
-      <HBox prefHeight="72.0" prefWidth="813.0" styleClass="grade-info-band">
+      <HBox spacing="10.0" styleClass="grade-info-band">
          <children>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+            <VBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="...depuis un autre ordinateur">
                      <font>
@@ -71,13 +71,10 @@
                      </font>
                   </Text>
                </children>
-               <padding>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-               </padding>
             </VBox>
-            <VBox alignment="CENTER_RIGHT" prefHeight="64.0" prefWidth="375.0">
+            <VBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
                <children>
-                  <Button mnemonicParsing="false" onAction="#afficherAdresseIPPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="32.0" prefWidth="225.0" styleClass="primary-button" text="AFFICHER L'ADRESSE IP">
+                  <Button mnemonicParsing="false" onAction="#afficherAdresseIPPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" prefWidth="223.0" text="AFFICHER L'ADRESSE IP">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -85,18 +82,16 @@
                            </image>
                         </ImageView>
                      </graphic>
-                     <font>
-                        <Font name="Verdana Bold" size="12.0" />
-                     </font>
+                     <styleClass>
+                        <String fx:value="primary-button" />
+                        <String fx:value="primary-button-not-hover" />
+                     </styleClass>
                   </Button>
                </children>
-               <padding>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-               </padding>
             </VBox>
-            <VBox alignment="CENTER_RIGHT" prefHeight="64.0" prefWidth="386.0">
+            <VBox alignment="CENTER_RIGHT">
                <children>
-                  <Button mnemonicParsing="false" onAction="#etablirUneConnexionPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="32.0" prefWidth="245.0" styleClass="primary-button" text="ETABLIR UNE CONNEXION">
+                  <Button mnemonicParsing="false" onAction="#etablirUneConnexionPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" prefWidth="223.0" text="ETABLIR UNE CONNEXION">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -104,26 +99,24 @@
                            </image>
                         </ImageView>
                      </graphic>
-                     <font>
-                        <Font name="Verdana Bold" size="12.0" />
-                     </font>
+                     <styleClass>
+                        <String fx:value="primary-button" />
+                        <String fx:value="primary-button-not-hover" />
+                     </styleClass>
                   </Button>
                </children>
-               <padding>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-               </padding>
             </VBox>
          </children>
          <VBox.margin>
-            <Insets bottom="16.0" left="5.0" right="5.0" top="5.0" />
+            <Insets />
          </VBox.margin>
          <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
          </padding>
       </HBox>
-      <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+      <HBox alignment="CENTER_RIGHT">
          <children>
-            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" styleClass="secondary-button" text="ANNULER">
+            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" text="ANNULER">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
@@ -134,6 +127,10 @@
                      </image>
                   </ImageView>
                </graphic>
+               <styleClass>
+                  <String fx:value="secondary-button" />
+                  <String fx:value="secondary-button-not-hover" />
+               </styleClass>
             </Button>
          </children>
       </HBox>
