--- a/src/vue/modules/ModuleEvaluation.fxml
+++ b/src/vue/modules/ModuleEvaluation.fxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.net.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<HBox spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox spacing="4.0" HBox.hgrow="ALWAYS">
          <children>
@@ -54,10 +53,15 @@
          <children>
             <HBox alignment="CENTER" spacing="4.0">
                <children>
-                  <TextField alignment="CENTER_RIGHT" prefWidth="164.0" promptText="Saisir une note" style="-fx-padding: 0 0 0 8px;" HBox.hgrow="ALWAYS">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
+                  <Label>
+                     <font>
+                        <Font name="Verdana Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="90.0" promptText="Note" style="-fx-padding: 0 0 0 8px;">
+                     <font>
+                        <Font name="Verdana Bold" size="24.0" />
+                     </font>
                   </TextField>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="/20">
                      <font>
