--- a/src/vue/modules/ModuleTitreRessource.fxml
+++ b/src/vue/modules/ModuleTitreRessource.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -20,17 +21,21 @@
                   </Text>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" styleClass="primary-button" stylesheets="@../modele/vue/style.css" text="EDITER LES MODALITES" textFill="WHITE">
+            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="EDITER LES MODALITES" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
                <graphic>
                   <ImageView pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../ressources/icone_editer.png" />
+                        <Image url="@../vue/ressources/icone_editer.png" />
                      </image>
                   </ImageView>
                </graphic>
+               <styleClass>
+                  <String fx:value="primary-button" />
+                  <String fx:value="primary-button-not-hover" />
+               </styleClass>
             </Button>
          </children>
       </HBox>
