--- a/src/vue/vueExporter.fxml
+++ b/src/vue/vueExporter.fxml
@@ -70,9 +70,9 @@
             </VBox>
             <HBox alignment="CENTER" prefHeight="52.0" prefWidth="500.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#programmeNationnalPresser" onMouseEntered="#boutonVideOuPleinEntree" onMouseExited="#boutonVideOuPleinSortie" prefHeight="32.0" prefWidth="225.0" styleClass="secondary-button" text="Programme nationnal">
+                  <Button mnemonicParsing="false" onAction="#programmeNationnalPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="32.0" prefWidth="225.0" styleClass="secondary-button" text="Programme nationnal">
                      <graphic>
-                        <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="plusProg" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../vue/ressources/icone_plus_violet.png" />
                            </image>
@@ -85,9 +85,9 @@
                         <Insets right="16.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#modalitesEvaluationPresser" onMouseEntered="#boutonVideOuPleinEntree" onMouseExited="#boutonVideOuPleinSortie" prefHeight="32.0" prefWidth="225.0" styleClass="secondary-button" text="Modalités d'évaluation">
+                  <Button mnemonicParsing="false" onAction="#modalitesEvaluationPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="32.0" prefWidth="225.0" styleClass="secondary-button" text="Modalités d'évaluation">
                      <graphic>
-                        <ImageView fitHeight="24.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="plusMod" fitHeight="24.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../vue/ressources/icone_plus_violet.png" />
                            </image>
