--- a/src/vue/modules/ModuleEvaluationEdition.fxml
+++ b/src/vue/modules/ModuleEvaluationEdition.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.net.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<HBox spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox spacing="16.0" styleClass="grade-info-band" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox spacing="4.0" HBox.hgrow="ALWAYS">
          <children>
@@ -61,14 +63,18 @@
          <children>
             <HBox alignment="CENTER" spacing="4.0">
                <children>
-                  <Button maxHeight="40.0" mnemonicParsing="false" styleClass="primary-button">
+                  <Button maxHeight="40.0" mnemonicParsing="false">
                      <graphic>
                         <ImageView pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../ressources/icone_supprimer.png" />
+                              <Image url="@../vue/ressources/icone_supprimer.png" />
                            </image>
                         </ImageView>
                      </graphic>
+                     <styleClass>
+                        <String fx:value="primary-button" />
+                        <String fx:value="primary-button-not-hover" />
+                     </styleClass>
                   </Button>
                </children>
             </HBox>
