--- a/src/vue/modules/ModuleRessourceEditionAjouter.fxml
+++ b/src/vue/modules/ModuleRessourceEditionAjouter.fxml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.net.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<HBox alignment="TOP_RIGHT" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox alignment="TOP_RIGHT" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" styleClass="primary-button" stylesheets="@../modele/vue/style.css" text="AJOUTER" textFill="WHITE">
+      <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="AJOUTER" textFill="WHITE">
          <font>
             <Font name="Verdana Bold" size="12.0" />
          </font>
          <graphic>
             <ImageView pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../ressources/icone_plus_blanc.png" />
+                  <Image url="@../vue/ressources/icone_plus_blanc.png" />
                </image>
             </ImageView>
          </graphic>
+         <styleClass>
+            <String fx:value="primary-button" />
+            <String fx:value="primary-button-not-hover" />
+         </styleClass>
       </Button>
    </children>
 </HBox>
