--- a/src/vue/modules/ModuleTitreRessourceEdition.fxml
+++ b/src/vue/modules/ModuleTitreRessourceEdition.fxml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.net.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<HBox stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_LEFT" spacing="16.0" HBox.hgrow="ALWAYS">
          <children>
@@ -18,29 +18,37 @@
                   <Font name="Verdana Bold" size="24.0" />
                </font>
             </Text>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" styleClass="primary-button" stylesheets="@../modele/vue/style.css" text="VALIDER" textFill="WHITE">
+            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="VALIDER" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
                <graphic>
                   <ImageView pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../ressources/icone_valider.png" />
+                        <Image url="@../vue/ressources/icone_valider.png" />
                      </image>
                   </ImageView>
                </graphic>
+               <styleClass>
+                  <String fx:value="primary-button" />
+                  <String fx:value="primary-button-not-hover" />
+               </styleClass>
             </Button>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" styleClass="secondary-button" stylesheets="@../modele/vue/style.css" text="ANNULER" textFill="WHITE">
+            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="ANNULER" textFill="WHITE">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
                <graphic>
                   <ImageView pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../ressources/icone_annuler.png" />
+                        <Image url="@../vue/ressources/icone_annuler.png" />
                      </image>
                   </ImageView>
                </graphic>
+               <styleClass>
+                  <String fx:value="secondary-button" />
+                  <String fx:value="secondary-button-not-hover" />
+               </styleClass>
             </Button>
          </children>
       </HBox>
