Fusion fini et fonctionnel

--- a/src/vue/VueReinitialiser.fxml
+++ b/src/vue/VueReinitialiser.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="482.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueReinitialiserControleur">
+<VBox id="container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="482.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueReinitialiserControleur">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Vous vous apprêtez à supprimer l'intégralité de vos données (notes, modalités, paramètres)." wrappingWidth="430.0">
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Vous vous apprêtez à supprimer l'intégralité de vos données (notes, modalités, paramètres)." wrappingWidth="430.0">
          <VBox.margin>
             <Insets bottom="4.0" left="32.0" right="32.0" top="24.0" />
          </VBox.margin>
@@ -20,7 +20,7 @@
             <Font name="Verdana Bold" size="16.0" />
          </font>
       </Text>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Êtes-vous sûr(e) de votre choix ?" wrappingWidth="430.0">
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Êtes-vous sûr(e) de votre choix ?" wrappingWidth="430.0">
          <VBox.margin>
             <Insets bottom="16.0" left="32.0" right="32.0" top="4.0" />
          </VBox.margin>
