--- a/src/vue/VueHomepage.fxml
+++ b/src/vue/VueHomepage.fxml
@@ -31,7 +31,7 @@
                   <Line endX="38.0" rotate="90.0" stroke="WHITE" translateY="16.0" />
                   <HBox spacing="16.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#importerPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" prefWidth="150.0" text="IMPORTER" textFill="WHITE">
+                        <Button mnemonicParsing="false" onAction="#importerPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="IMPORTER" textFill="WHITE">
                            <font>
                               <Font name="Verdana Bold" size="12.0" />
                            </font>
@@ -47,7 +47,7 @@
                               <String fx:value="primary-button-not-hover" />
                            </styleClass>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#exporterPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" prefWidth="150.0" text="EXPORTER" textFill="WHITE">
+                        <Button mnemonicParsing="false" onAction="#exporterPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="EXPORTER" textFill="WHITE">
                            <font>
                               <Font name="Verdana Bold" size="12.0" />
                            </font>
@@ -66,7 +66,7 @@
                      </children>
                   </HBox>
                   <Line endX="38.0" rotate="90.0" stroke="WHITE" translateY="16.0" />
-                  <Button mnemonicParsing="false" onAction="#reinitialiserPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" prefWidth="150.0" text="REINITIALISER" textFill="#9555e8">
+                  <Button mnemonicParsing="false" onAction="#reinitialiserPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" prefWidth="150.0" text="REINITIALISER" textFill="#9555e8">
                      <font>
                         <Font name="Verdana Bold" size="12.0" />
                      </font>
@@ -92,7 +92,7 @@
          <children>
             <VBox id="container" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="370.0" spacing="16.0">
                <children>
-                  <Button graphicTextGap="8.0" mnemonicParsing="false" onAction="#afficherMesMoyennesPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" prefWidth="360.0" text="AFFICHER MES MOYENNES" textFill="WHITE">
+                  <Button graphicTextGap="8.0" mnemonicParsing="false" onAction="#afficherMesMoyennesPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="360.0" text="AFFICHER MES MOYENNES" textFill="WHITE">
                      <font>
                         <Font name="Verdana Bold" size="12.0" />
                      </font>
