--- a/src/vue/VuePopUpImporter.fxml
+++ b/src/vue/VuePopUpImporter.fxml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
@@ -15,9 +10,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="283.0" prefWidth="845.0" spacing="16.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VueImporterControleur">
+<VBox id="container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="283.0" prefWidth="845.0" spacing="16.0" stylesheets="@../vue/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controleur.VuePopUpImporterControleur">
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="IMPORTER DES DONNEES..." wrappingWidth="253.8828125">
+      <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="IMPORTER DES DONNEES..." wrappingWidth="253.8828125">
          <font>
             <Font name="Verdana Bold" size="16.0" />
          </font>
@@ -38,7 +33,7 @@
             </VBox>
             <VBox alignment="CENTER_RIGHT">
                <children>
-                  <Button mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#importerPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" text="IMPORTER">
+                  <Button mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#importerPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" text="IMPORTER">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -74,7 +69,7 @@
             </VBox>
             <VBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
                <children>
-                  <Button mnemonicParsing="false" onAction="#afficherAdresseIPPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" prefWidth="223.0" text="AFFICHER L'ADRESSE IP">
+                  <Button mnemonicParsing="false" onAction="#afficherAdresseIPPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="223.0" text="AFFICHER L'ADRESSE IP">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -91,7 +86,7 @@
             </VBox>
             <VBox alignment="CENTER_RIGHT">
                <children>
-                  <Button mnemonicParsing="false" onAction="#etablirUneConnexionPresser" onMouseEntered="#boutonPleinEntree" onMouseExited="#boutonPleinSortie" prefHeight="40.0" prefWidth="223.0" text="ETABLIR UNE CONNEXION">
+                  <Button mnemonicParsing="false" onAction="#etablirUneConnexionPresser" onMouseEntered="#primaryButtonEntered" onMouseExited="#primaryButtonExited" prefHeight="40.0" prefWidth="223.0" text="ETABLIR UNE CONNEXION">
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -116,7 +111,7 @@
       </HBox>
       <HBox alignment="CENTER_RIGHT">
          <children>
-            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#boutonVideEntree" onMouseExited="#boutonVideSortie" prefHeight="40.0" text="ANNULER">
+            <Button mnemonicParsing="false" onAction="#annulerPresser" onMouseEntered="#secondaryButtonEntered" onMouseExited="#secondaryButtonExited" prefHeight="40.0" text="ANNULER">
                <font>
                   <Font name="Verdana Bold" size="12.0" />
                </font>
